Add penalty attribute to the Team entity
