# apps/api/src/openapi/components.yaml
@@ -132,6 +132,16 @@ components:
           items:
             type: string
           default: []
+        startedAt:
+          type: string
+          format: date-time
+        finishedAt:
+          type: string
+          format: date-time
+        penalty:
+          type: integer
+          minimum: 0
+          default: 0
 
     CreateTeamSchema:
       type: object
@@ -155,6 +165,10 @@ components:
           $ref: '#/components/schemas/Station/properties/number'
         members:
           $ref: '#/components/schemas/Station/properties/members'
+        startedAt:
+          $ref: '#/components/schemas/Station/properties/startedAt'
+        finishedAt:
+          $ref: '#/components/schemas/Station/properties/finishedAt'
 
     #-------------------------------
     # Token schemas
